feat: Z80 syntax highlighting, splash screen and file ops (v0.0.3)
- Professional splash screen with loading progress
- Z80 Assembly syntax highlighting (inline styles)
- File operations: New, Open, Save, Save As with dialogs
- Complete menu system with keyboard shortcuts (Cmd+N/O/S, F5/F6, etc.)
- Unsaved changes detection
- Fixed RichTextFX coloring issues
- Fixed truncated dialog buttons
- Enhanced i18n support

Components added:
- SplashScreen.java
- Z80Lexer.java
- FileManager.java
- Updated CodeEditor.java, Main.java
- Enhanced messages_es.properties

--- a/src/main/resources/com/lazyzxsoftware/zxspectrumide/i18n/messages_es.properties
+++ b/src/main/resources/com/lazyzxsoftware/zxspectrumide/i18n/messages_es.properties
@@ -4,7 +4,7 @@
 # ============================================
 # GENERAL
 # ============================================
-app.title=ZX Spectrum IDE - v0.0.2
+app.title=ZX Spectrum IDE - v0.0.3
 app.ready=Listo
 app.loading=Cargando...
 app.saving=Guardando...
@@ -15,6 +15,8 @@ app.running=Ejecutando...
 # MENÚ ARCHIVO
 # ============================================
 menu.file=Archivo
+menu.file.new=Nuevo
+menu.file.open=Abrir...
 menu.file.new_project=Nuevo Proyecto...
 menu.file.open_project=Abrir Proyecto...
 menu.file.save=Guardar
@@ -49,8 +51,8 @@ menu.view.show_minimap=Mostrar minimapa
 # MENÚ HERRAMIENTAS
 # ============================================
 menu.tools=Herramientas
-menu.tools.compile=Compilar (F5)
-menu.tools.run=Ejecutar (F6)
+menu.tools.compile=Compilar
+menu.tools.run=Ejecutar
 menu.tools.sprite_editor=Editor de Sprites
 menu.tools.map_editor=Editor de Mapas
 menu.tools.music_editor=Editor de Música
@@ -110,7 +112,7 @@ dialog.documentation.message=Ver README.md y TODO.md en el repositorio
 # DIÁLOGO ACERCA DE
 # ============================================
 dialog.about.title=Acerca de ZX Spectrum IDE
-dialog.about.header=ZX Spectrum IDE v0.0.2
+dialog.about.header=ZX Spectrum IDE v0.0.3
 dialog.about.content=IDE moderno para desarrollo de juegos ZX Spectrum\n\n\
 Desarrollado por: Lazy ZX Software\n\
 Licencia: Apache 2.0\n\
@@ -131,12 +133,33 @@ status.line_numbers.disabled=Números de línea: desactivados
 status.file_saved=Archivo guardado
 
 # ============================================
+# GESTIÓN DE ARCHIVOS
+# ============================================
+file.untitled=Sin título
+file.modified=*
+file.open_dialog.title=Abrir archivo
+file.save_dialog.title=Guardar archivo
+file.asm_files=Archivos Assembly (*.asm)
+file.all_files=Todos los archivos (*.*)
+file.opened=Archivo abierto: %s
+file.saved=Archivo guardado: %s
+file.error.open=Error al abrir el archivo
+file.error.save=Error al guardar el archivo
+file.unsaved.title=Archivo sin guardar
+file.unsaved.message=El archivo tiene cambios sin guardar.\n¿Deseas guardarlo antes de continuar?
+file.unsaved.save=Guardar
+file.unsaved.discard=Descartar
+file.unsaved.cancel=Cancelar
+
+# ============================================
+# EDITOR
+# ============================================
+editor.placeholder=; Escribe tu código Z80 Assembly aquí...
+
+# ============================================
 # MENSAJES
 # ============================================
 message.ide_started=ZX Spectrum IDE iniciado correctamente
 message.current_theme=Tema actual: %s
 message.config_saved=Configuración guardada
 message.config_loaded=Configuración cargada
-
-# Editor
-editor.placeholder=; Escribe tu código Z80 Assembly aquí...
