--- a/src/main/resources/com/lazyzxsoftware/zxspectrumide/i18n/messages_es.properties
+++ b/src/main/resources/com/lazyzxsoftware/zxspectrumide/i18n/messages_es.properties
@@ -20,7 +20,7 @@ menu.file.open=Abrir...
 menu.file.new_project=Nuevo Proyecto...
 menu.file.open_project=Abrir Proyecto...
 menu.file.save=Guardar
-menu.file.save_as=Guardar como...
+menu.file.saveas=Guardar Como...
 menu.file.close=Cerrar
 menu.file.exit=Salir
 
