feat: v0.0.8 - Multi-tab editor, Project Sidebar & Find/Replace
Major update transforming the editor into a basic IDE structure.

Key changes:
- Editor: Implemented multi-tab support for editing multiple files simultaneously.
- Editor: Added 'Find and Replace' functionality (Ctrl+F / Ctrl+R).
- Editor: Added standard edit actions (Undo, Redo, Copy, Paste, Cut, Select All).
- UI: Introduced a collapsible Project Sidebar (File Explorer).
- UI: Sidebar is hidden by default and activates upon 'Open Project'.
- Workflow: Implemented 'Open Project' and 'Close Project' logic.
- Workflow: Added auto-detection to open 'main.asm' or single file when loading a project.
- Safety: Added checks for unsaved changes before closing tabs, projects, or compiling.
- i18n: Updated Spanish translations for new dialogs and menus.

Refactored FileManager and Main to support the new project-based architecture.

--- a/src/main/resources/com/lazyzxsoftware/zxspectrumide/i18n/messages_es.properties
+++ b/src/main/resources/com/lazyzxsoftware/zxspectrumide/i18n/messages_es.properties
@@ -4,7 +4,7 @@
 # ============================================
 # GENERAL
 # ============================================
-app.title=ZX Spectrum IDE - v0.0.4
+app.title=ZX Spectrum IDE - v0.0.8
 app.ready=Listo
 app.loading=Cargando...
 app.saving=Guardando...
@@ -163,3 +163,20 @@ message.ide_started=ZX Spectrum IDE iniciado correctamente
 message.current_theme=Tema actual: %s
 message.config_saved=Configuración guardada
 message.config_loaded=Configuración cargada
+
+# Editor y Pestañas
+label.untitled=Sin título
+
+# Diálogos de Archivo
+dialog.open.title=Abrir archivo
+dialog.save.title=Guardar archivo
+
+# Diálogo de confirmación de cierre
+dialog.unsaved.title=Cambios sin guardar
+dialog.unsaved.header=Confirmar cierre
+dialog.unsaved.content=El archivo ''{0}'' tiene cambios sin guardar.
+
+# Botones comunes
+button.save=Guardar
+button.dontsave=No guardar
+button.cancel=Cancelar
